compiler/testData/diagnostics/tests/annotations/typeParameterAsAnnotation.kt
class C<T> {
    <!NOT_A_CLASS!>T<!> fun foo() {}
}